--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Cabin&family=Catamaran:wght@100&family=Fjalla+One&family=Hind:wght@300&family=Lato:wght@700&family=Noto+Sans&family=Roboto:wght@500&display=swap");
 
-/* to-do:  3 product tables, check media query for infotext scaling  */
+/* to-do:  320px. fix table-item columning at 967px, it isn't respecting margin-top   */
 
 /*
 font-family: 'Cabin', sans-serif;
@@ -14,7 +14,7 @@ font-family: 'Roboto', sans-serif;
 */
 
 header {
-  background-color: #D1F4F2;
+  background-color: #d1f4f2;
   width: 100%;
   height: 140px;
   margin-bottom: 100px;
@@ -46,26 +46,23 @@ header {
   max-width: 100%;
 }
 
-  .nav-link:hover {
-   color: #E0AE46;
-   
-  
+.nav-link:hover {
+  color: #e0ae46;
 }
 
 nav > ul {
   display: flex;
   flex-direction: row-reverse;
-  background-color: #D1F4F2;
+  background-color: #d1f4f2;
 }
 ul {
   list-style-type: none;
   position: fixed;
   width: 100%;
   background-color: gray;
-  
 }
 .nav-link {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 22px;
   color: #243399;
 }
@@ -75,20 +72,18 @@ li {
   padding-right: 15px;
 }
 /* banner container to center #banner image allows it to work with our #banner media query positioning  */
-.banner-container{
+.banner-container {
   display: flex;
   justify-content: center;
 }
 #banner {
-  border: 3px solid #D1F4F2;
+  border: 3px solid #d1f4f2;
   max-width: 100%;
   height: auto;
-  
 }
 
-  body {
-  	background-color: #68AEA9;
-    
+body {
+  background-color: #68aea9;
 }
 
 .form-container {
@@ -112,19 +107,19 @@ form {
 }
 
 #hedgehog-info {
-  
   background: white;
 }
 
 .video-zone {
-  background: #68AEA9;
+  background: #68aea9;
   display: flex;
-  height: 500px;
+  height: 800px;
   justify-content: center;
+  margin-bottom: -350px;
 }
 
 .info-text {
-  width: 1000px;
+  width: 800px;
   background: white;
   align-items: center;
   display: flex;
@@ -149,63 +144,67 @@ form {
   flex-direction: row;
   justify-content: center;
   margin-top: -50px;
-  
-  
+  max-height: 600px;
 }
 
 h2 {
-  background-color: #F5DC91;
-  padding: 15px 0;
+  background-color: #f5dc91;
   width: 100%;
   border-radius: 25px;
-  border: solid 3px #DA9E5D;
-  
+  border: solid 3px #da9e5d;
+  text-align: center;
+  justify-content: center;
+  padding: 15px 0;
 }
 
 .table-item {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
+  flex-wrap: wrap;
   text-align: center;
   margin: 0 30px;
   max-width: 100%;
   width: 350px;
-  background: #D1F4F2;
+  background: #d1f4f2;
   border: solid 3px #7d94ba;
   padding: 25px;
-  
-  
+
+  /*grid layout format trial
+  padding: 23px;
+  margin-left: 50px;
+  display: grid;
+  grid-template-rows: 6.2rem 11.9rem 6.25rem;
+  grid-template-columns: 1fr;
+  gap: 0.75rem 0.25rem;
+  background: #D1F4F2;
+  border: solid 3px #7d94ba;
+  width: 350px;
+  */
 }
-
-
 
 .button {
   height: 40px;
   font-size: 18px;
   font-weight: 900;
-  border: 3px solid #DA9E5D;
+  border: 3px solid #da9e5d;
   border-radius: 3px;
-  background: #E3C76A;
+  background: #e3c76a;
   cursor: pointer;
-  font-family: 'Catamaran', sans-serif;
+  font-family: "Catamaran", sans-serif;
   width: 220px;
   align-self: center;
-  
+  margin-top: auto;
 }
 
 .button:hover {
-   background-color: #F0D379;
-  
+  background-color: #f0d379;
 }
-.shipping-btn {
-  margin-top: 49px;
-}
-  
+
 footer {
   margin-top: 30px;
   background-color: #dfe0e0;
   padding: 16px;
-  font-family: 'Catamaran', sans-serif;
-  
+  font-family: "Catamaran", sans-serif;
 }
 
 footer > ol {
@@ -213,7 +212,6 @@ footer > ol {
   justify-content: flex-end;
   list-style-type: none;
   font-size: 18px;
-  
 }
 
 footer > ol > li {
@@ -227,22 +225,16 @@ footer > span {
   padding: 0 15px;
   font-size: 15px;
   color: #444;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
-
-
-
-
-
-
-
+/*
 @media only screen and (max-width: 850px) {
   #video {
-    min-height: 300px;
-  }
-}
+    min-height: 300px; */
+
 /* max width of nav bar (text) media query changes with scaling*/
+/*
 @media (max-width: 865px) {
   nav {
     flex-direction: column-reverse;
@@ -256,6 +248,7 @@ footer > span {
     flex-direction: column-reverse;
   }
 }
+
 @media (max-width: 865px) {
   nav {
     position: fixed;
@@ -278,17 +271,9 @@ footer > span {
   }
 }
 
+*/
 
-@media (max-width: 967px) {
-  #table-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: -100px;
-    
-  }
-}
-
+/*
 
 
 
@@ -322,7 +307,7 @@ footer > span {
     height: 650px;
     margin-bottom: 100px;
   }
-}
+} 
 
 @media only screen and (max-width: 955px) {
   .info-text {
@@ -331,3 +316,371 @@ footer > span {
     height: 500px;
   }
 }
+
+*/
+/* for some reason syntax MUST be @media (max-width) if using only screen AND it will not work. Spaghetti! */
+
+@media (max-width: 320px) {
+  #banner {
+   margin-top: -40px;
+   margin-bottom: -10px;
+}
+  
+  #header-img {
+   width: 33%;
+   height: auto; 
+}
+  
+  nav {
+    position: flex;
+    display: none;
+}
+  
+  #prickle {
+    font-size: 28px;
+    left: 120px;
+    top: -67px;
+    width: 163px;
+
+}
+  
+  #video {
+    min-height: 242px;
+}
+ 
+  .video-zone{
+    max-height: 1500px;
+    margin-top: 52px;
+    
+    
+}
+  
+  .info-text {
+  max-width: 303px;
+  max-height: 1900px; 
+  font-size: 16px !important; 
+  
+    
+}
+  
+  #table-container {
+  margin-top: -25px;
+
+  }
+  
+}
+
+
+
+@media only screen and (min-width: 321px) and (max-width: 384px) {
+  
+  nav {
+    display: none;
+}
+  
+  #prickle {
+    font-size: 30px;
+    width: 172px;
+    top: -93px;
+      
+      
+}
+}
+
+/*samsung* and 400px responsive*/
+
+@media only screen 
+    and (min-width: 384px) 
+    and (max-width: 767px) {
+      
+      header {
+        position: static;
+        z-index: 9999;
+        
+      }
+      
+      nav {
+      position: flex;
+      display: none; 
+      
+      }
+      
+      #banner{
+      margin-top: -50px;
+}
+      
+      #prickle {
+        font-size: 30px;
+        margin-top: 20px;
+        width: 179px;
+}
+      #form {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 40px;
+}
+      
+      
+      #submit {
+        margin-top: 12px;
+        margin-bottom: 30px;
+
+}
+      #video {
+        min-height: 250px;
+      } 
+      .info-text {
+    max-width: 384px;
+    padding: 10px 20px 10px 20px;
+    margin-bottom: 20px;
+    max-height: 1500px;
+        
+      }
+      
+      .button {
+       color: black;
+}
+    
+   
+      }  
+
+
+
+
+/* iphone 13 screen*/
+
+@media only screen 
+    and (min-width: 390px) 
+    and (max-width: 767px) 
+    and (-webkit-device-pixel-ratio: 3) {
+      
+      header {
+        position: static;
+        z-index: 9999;
+        
+      }
+      
+      nav {
+      position: flex;
+      display: none; 
+      
+      }
+      
+      #banner{
+      margin-top: -50px;
+}
+      
+      #prickle {
+        font-size: 36px;
+        margin-top: 13px;
+        width: 225px;
+}
+      
+      #form {
+        margin-bottom: -0px;
+} 
+      
+      #video {
+      min-height: 250px;
+}
+      
+       .info-text {
+    max-width: 390px;
+    padding: 10px 20px 10px 20px;
+    margin-bottom: 10px;
+    max-height: 1500px;
+      }
+      
+      .button {
+       color: black;
+}
+      .video-zone {
+       margin-top: -20px;
+       height: 500px;
+       max-width: 390px;
+      }
+      
+      #table-container {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+      }
+   
+      .table-item {
+      margin-bottom: 20px;
+
+}
+}
+
+
+/* gal note plus and 600px responsive*/
+
+@media only screen 
+  and (min-width: 412px) 
+  and (max-width: 869px) {
+  
+     header {
+        position: static;
+        z-index: 9999;
+        
+      }
+      
+      nav {
+      position: flex;
+      display: none; 
+      
+      }
+      
+      #banner{
+      margin-top: -50px;
+}
+      
+      #prickle {
+        font-size: 40px;
+        margin-top: 13px;
+        width: 220px;
+}
+      
+      #submit {
+        margin-top: 12px;
+
+}
+      
+    #video {
+      min-height: 255px;
+      width: 412px;
+
+}
+    
+      .info-text {
+       max-width: 412px;
+       padding: 10px 20px 10px 20px;
+       margin-bottom: 10px;
+       max-height: 520px;
+      }
+      
+      .button {
+       color: black;
+     
+}
+      .video-zone {
+       margin-top: 20px;
+       height: 500px;
+      }
+      
+      #table-container {
+        margin-top: -50px;
+      }
+       
+      }     
+
+
+
+@media only screen and (max-width: 967px) {
+  #table-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 1500px;
+  }
+  
+  .table-item {
+    margin-top: 10px;
+}
+}
+
+@media only screen 
+    and (max-width: 1024px) {
+        
+                
+      .video-zone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 700px;
+    margin-bottom: 100px;
+        
+  }
+
+           
+      }  
+
+
+
+@media only screen 
+    and (max-width: 1200px) {
+                 
+      
+      #submit {
+        margin-top: 12px;
+
+}
+    
+            
+      .info-text{
+    width: 500px;
+    font-size: 18px;    
+   padding: 15px;
+      }
+      
+}   
+
+/*galaxy s20 NOT WORKING!!
+@media only screen 
+   and (min-width: 360px) 
+   and (max-width: 767px) {
+      
+      header {
+        position: static;
+        z-index: 9999;
+        
+      }
+      
+      nav {
+      position: flex;
+      display: none; 
+      
+      }
+      
+      #banner{
+      margin-top: -50px;
+}
+      
+      #prickle {
+        font-size: 3px;
+        margin-top: 13px;
+        width: 172px;
+}
+      
+      #submit {
+        margin-top: 12px;
+
+}
+      
+      .info-text {
+    width: 400px;
+    padding: 10px 15px 10px 15px;
+    margin-bottom: 10px;
+    max-height: 520px;
+    font-size: 10px;
+      }
+      
+      .button {
+       color: black;
+}
+      .video-zone {
+       margin-top: 60px;
+       height: 500px;
+      }
+     
+      #table-container {
+        margin-top: 10px;
+      }
+   
+      }   
+
+*/
